Added validation for description: length and prescense.

--- a/toDo/app/views/layouts/application.html.erb
+++ b/toDo/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>ToDo</title>
+  <title>To Do</title>
 
   <%= stylesheet_link_tag    'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
@@ -16,12 +16,12 @@
         <span class="icon-bar"></span>
         <span class="icon-bar"></span>
       </a>
-      <a class="brand" href="#">Some Store</a>
+      <a class="brand" href="#">My Life</a>
       <div class="nav-collapse">
         <ul class="nav">
-           <li><%= link_to "Price List" %></li>
-          <li><%= link_to "Contact Us" %></li>
-          <li><%= link_to "Cart" %></li>
+           <li><%= link_to "Job" %></li>
+          <li><%= link_to "Contact Me" %></li>
+          <li><%= link_to "Bio" %></li>
         </ul>
       </div>
     </div>
@@ -32,8 +32,8 @@
   <div class="row">
     <div class="span9"><%= yield %></div>
     <div class="span3">
-      <h2>About Us</h2>
-      <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>        
+      <h2>About Me</h2>
+      <p>I like to eat pies, especially blue ones. The bluer, the better. My appetite has no boundries. Sometimes, I like to play chemist and throw "calculated" food items and liquids into a "flavor fusor", that is my blender, and create new flavors that is beyond the realm of normal tastebuds. It's like creating a symphony in my mouth. A bit of oil from cheeses, avocado, or fish to allow flavors to linger longer in one's mouth, or none to give a fleeting yet sharp point of taste. <br /> <br />My world is one of taste of buds. <br /> <br /> -Vandoona</p>        
     </div>
   </div>
 </div>
