Aded testing and cleaned it.

--- a/toDo/app/views/layouts/application.html.erb
+++ b/toDo/app/views/layouts/application.html.erb
@@ -33,7 +33,7 @@
     <div class="span9"><%= yield %></div>
     <div class="span3">
       <h2>About Me</h2>
-      <p>I like to eat pies, especially blue ones. The bluer, the better. My appetite has no boundries. Sometimes, I like to play chemist and throw "calculated" food items and liquids into a "flavor fusor", that is my blender, and create new flavors that is beyond the realm of normal tastebuds. It's like creating a symphony in my mouth. A bit of oil from cheeses, avocado, or fish to allow flavors to linger longer in one's mouth, or none to give a fleeting yet sharp point of taste. <br /> <br />My world is one of taste of buds. <br /> <br /> -Vandoona</p>        
+      <p>I like to eat pies, especially blue ones. The bluer, the better. My appetite has no boundries. <br /> <br />On my free time, I like to play chemist and throw "calculated" food items and liquids into a "flavor fusor", that is my blender, and create new flavors that is beyond the realm of normal tastebuds. It's like creating a symphony in my mouth. A bit of oil from cheeses, avocados, or fish to allow flavors to linger longer in one's mouth, or none to give a fleeting yet sharp jabs to the tongue. <br /> <br />My world is one of taste of buds. <br /> <br /> -Vandoona</p>        
     </div>
   </div>
 </div>
