--- a/toDo/app/views/todo_lists/_form.html.erb
+++ b/toDo/app/views/todo_lists/_form.html.erb
@@ -12,8 +12,8 @@
   <% end %>
 
   <div class="field">
-    <%= f.label :title %><br>
-    <%= f.text_field :title %>
+    <%= f.label :title, "I need to..." %>
+         <%= f.text_field :title %>
   </div>
   <div class="field">
     <%= f.label :description %><br>
