--- a/toDo/app/views/todo_lists/new.html.erb
+++ b/toDo/app/views/todo_lists/new.html.erb
@@ -1,6 +1,6 @@
 <%- model_class = TodoList -%>
 
 <div class="page-header">
-  <h1><%=t '.title', :default => [:'helpers.titles.new', 'New %{model}'], :model => model_class.model_name.human.titleize %></h1>
+  <h1>Another Thing to Do</h1>
 </div>
 <%= render :partial => 'form' %>
