--- a/toDo/app/assets/stylesheets/application.css
+++ b/toDo/app/assets/stylesheets/application.css
@@ -13,3 +13,33 @@
  *= require_tree .
  *= require_self
  */
+
+
+div.alert {
+	border: 2px solid #aaa; 
+	padding:10px; 
+}
+
+div.nav ul li {
+	float:left; 
+	list-style: none; 
+	clear: right; 
+	margin: 0 0 0 1em; 
+	padding: 0; 
+}
+
+div.nav ul li a {
+	display: block; 
+	width: auto; 
+	padding: 8px 10px 8px 10px; 
+	background: #eee; 
+	color: #aaa;
+}
+
+div.nav {
+	margin-bottom: 20px; 
+}
+ div.nav a {
+ 	text-decoration: none !important; 
+ }
+ 
